src/main/java/org/example/hotel_service/errors/exception/NotFoundException.java
package org.example.hotel_service.errors.exception;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
